2009-05-01  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Correct section IDs.

2009-05-01  Murray Cumming  <murrayc@murrayc.com>

	ClutterText corrections.
	
	* docs/tutorial/clutter-tut.xml: ClutterText section: Correct/Improve the 
	text.
	* examples/text/main.c (main): Add a second ClutterText so we have one 
	non-editable and one editable multi-line editable.

2009-04-30  Murray Cumming  <murrayc@murrayc.com>

	Fix the build.
	
	* configure.ac: 
	* examples/text/Makefile.am: Added this file and mentioned it to fix the 
	build.
	* examples/text/main.c, examples/scrolling/main.c: Correct formatting. 

2009-04-29  Johannes Schmid  <jschmid@openismus.com>

	* examples/text/main.c:
	* examples/Makefile.am:
	* docs/tutorial/clutter-tut.xml:
	* docs/tutorial/figures/text.png:
	Added section for ClutterText
	
	Added a section and an example for ClutterText. Moved scrolling section
	to normal section from appendix.

2009-04-29  Johannes Schmid  <jschmid@openismus.com>

	* examples/scrolling/main.c:
	* examples/scrolling/Makefile.am:
	* docs/tutorial/clutter-tut.xml:
	* docs/tutorial/figures/scrolling.png:
	Ported scrolling example to the new ClutterViewport class
  
	Updated example code and scrolling chapter in the tutorial
	(openedhand bug #935)

2009-04-27  Murray Cumming  <murrayc@murrayc.com>

	Mention ClutterText.
	
	* configure.ac:
	* docs/examples/: Removed multiline_text_entry/
	* docs/tutorial/clutter-tut.xml: Actors: Mention ClutterText instead of 
	ClutterEntry and ClutterLabel.
	Remove the multiline text editing appendix because ClutterText can now do that. 

2009-04-24  Murray Cumming  <murrayc@murrayc.com>

	Don't mention 0.8.
	
	* docs/tutorial/clutter-tut.xml: Change the 0.8 version entity to 0.9, 
	and correct the reference links.

2009-04-24  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Contributing: Change the email address and 
	mention the git module. 
