@@ -102,7 +102,6 @@ AC_OUTPUT([
     examples/custom_actor/Makefile
     examples/custom_container/Makefile
     examples/behaviour/Makefile
-    examples/entry/Makefile
     examples/animation/Makefile
     examples/full_example/Makefile
       examples/full_example/images/Makefile
