@@ -1,7 +1,0 @@
-include $(top_srcdir)/examples/Makefile.am_fragment
-
-#Build the executable, but don't install it.
-noinst_PROGRAMS = example
-
-example_SOURCES = main.c
-
